lorax: add system recovery option (rEFInd)

--- a/lorax-templates-qubes/templates/config_files/x86/xen-efi.cfg
+++ b/lorax-templates-qubes/templates/config_files/x86/xen-efi.cfg
@@ -6,6 +6,11 @@ options=console=none
 kernel=vmlinuz @ROOT@ quiet rhgb rd.live.check
 ramdisk=initrd.img
 
+[qubes-rescue]
+options=loglvl=all
+kernel=vmlinuz @ROOT@ rescue
+ramdisk=initrd.img
+
 [qubes]
 options=console=none
 kernel=vmlinuz @ROOT@ quiet rhgb
