--- a/conf/qubes-kickstart.cfg
+++ b/conf/qubes-kickstart.cfg
@@ -9,6 +9,9 @@ repo --name=fedora-updates --gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-fedora-2
 repo --name=installer --baseurl=file:///tmp/qubes-installer/yum/installer/
 repo --name=qubes-dom0 --baseurl=file:///tmp/qubes-installer/yum/qubes-dom0/
 repo --name=dom0-updates --baseurl=file:///tmp/qubes-installer/yum/dom0-updates/
+repo --name=qubes-current --gpgkey=file:///tmp/qubes-installer/qubes-release/RPM-GPG-KEY-qubes-3-primary --baseurl=http://yum.qubes-os.org/r3.1/current/dom0/fc20/
+repo --name=qubes-templates-itl --gpgkey=file:///tmp/qubes-installer/qubes-release/RPM-GPG-KEY-qubes-3-primary --baseurl=http://yum.qubes-os.org/r3.1/templates-itl/
+repo --name=qubes-templates-community --gpgkey=file:///tmp/qubes-installer/qubes-release/RPM-GPG-KEY-qubes-3-templates-community --baseurl=http://yum.qubes-os.org/r3.1/templates-community/
 %packages
 @core
 @base
