conf: sync OEM kickstart with the standard one
Especially include Debian 8 template

--- a/conf/oem-kickstart.cfg
+++ b/conf/oem-kickstart.cfg
@@ -21,13 +21,15 @@ logvol swap --fstype=swap --vgname=qubes --name=swap --size=2000
 logvol / --fstype=ext4 --vgname=qubes --name=root --size=10000 --grow
 
 %packages
+@core
 @base
 @base-x
-@fonts
-@qubes
-@sound-basic
 @kde-desktop-qubes
 @xfce-desktop-qubes
 @xfce-extra-plugins
 @xfce-media
+@sound-basic
+@fonts
+@qubes
+@debian-8
 %end
