lorax: add "verbose boot" in rEFInd menu
Fixes QubesOS/qubes-issues#1598

--- a/lorax-templates-qubes/templates/config_files/x86/refind.conf
+++ b/lorax-templates-qubes/templates/config_files/x86/refind.conf
@@ -436,3 +436,9 @@ menuentry "Rescue a @PRODUCT@ system" {
     loader @EFIDIR@\xen.efi
     options "qubes-rescue"
 }
+
+menuentry "Troubleshooting - verbose boot and Install @PRODUCT@ @VERSION@" {
+	volume ANACONDA
+    loader @EFIDIR@\xen.efi
+    options "qubes-verbose"
+}
