lorax: fix typo in refind.conf
QubesOS/qubes-issues#794

--- a/lorax-templates-qubes/templates/config_files/x86/refind.conf
+++ b/lorax-templates-qubes/templates/config_files/x86/refind.conf
@@ -182,7 +182,7 @@ textmode 2
 #
 #showtools shell, gdisk, memtest, mok_tool, about, reboot, exit, firmware
 
-showtools, memtest, exit, shutdown, reboot
+showtools memtest, exit, shutdown, reboot
 
 # Boot loaders that can launch a Windows restore or emergency system.
 # These tend to be OEM-specific.
