lorax: add initial rEFInd theme
QubesOS/qubes-issues#794

--- a/lorax-templates-qubes/templates/config_files/x86/refind.conf
+++ b/lorax-templates-qubes/templates/config_files/x86/refind.conf
@@ -55,6 +55,7 @@ timeout 20
 #
 #banner hostname.bmp
 #banner mybanner.png
+banner splash.png
 
 # Specify how to handle banners that aren't exactly the same as the screen
 # size:
@@ -105,8 +106,7 @@ timeout 20
 # it no value or any non-0 value causes text mode to be used.
 # Default is to use graphics mode.
 #
-# TODO: prepare theme
-textonly
+#textonly
 
 # Set the EFI text mode to be used for textual displays. This option
 # takes a single digit that refers to a mode number. Mode 0 is normally
@@ -363,6 +363,8 @@ scanfor manual
 #default_selection Maintenance 23:30 2:00
 #default_selection "Maintenance,OS X" 1:00 2:30
 
+default_selection 2
+
 # Enable VMX bit and lock the CPU MSR if unlocked.
 # On some Intel Apple computers, the firmware does not lock the MSR 0x3A.
 # The symptom on Windows is Hyper-V not working even if the CPU
@@ -421,24 +423,28 @@ scanfor manual
 
 menuentry "Install @PRODUCT@ @VERSION@" {
 	volume ANACONDA
+    icon @EFIDIR@\icons\os_qubes.png
     loader @EFIDIR@\xen.efi
     options ""
 }
 
 menuentry "Test this media and Install @PRODUCT@ @VERSION@" {
 	volume ANACONDA
+    icon @EFIDIR@\icons\os_qubes.png
     loader @EFIDIR@\xen.efi
     options "qubes-check"
 }
 
 menuentry "Rescue a @PRODUCT@ system" {
 	volume ANACONDA
+    icon @EFIDIR@\icons\os_qubes.png
     loader @EFIDIR@\xen.efi
     options "qubes-rescue"
 }
 
 menuentry "Troubleshooting - verbose boot and Install @PRODUCT@ @VERSION@" {
 	volume ANACONDA
+    icon @EFIDIR@\icons\os_qubes.png
     loader @EFIDIR@\xen.efi
     options "qubes-verbose"
 }
