anaconda: do not manually enable initial-setup
This is done in pykickstart, as a response to firstboot directive.

--- a/conf/qubes-kickstart.cfg
+++ b/conf/qubes-kickstart.cfg
@@ -9,6 +9,9 @@ repo --name=fedora-updates --gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-fedora-2
 repo --name=installer --baseurl=file:///tmp/qubes-installer/yum/installer/
 repo --name=qubes-dom0 --baseurl=file:///tmp/qubes-installer/yum/qubes-dom0/
 repo --name=dom0-updates --baseurl=file:///tmp/qubes-installer/yum/dom0-updates/
+
+firstboot --enable
+
 %packages
 @core
 @base
