oem-kickstart: adjust for EFI installation

--- a/conf/oem-kickstart.cfg
+++ b/conf/oem-kickstart.cfg
@@ -14,7 +14,7 @@ bootloader --location=mbr --boot-drive=sda
 xconfig --startxonboot
 
 clearpart --none
-part /boot --fstype=ext4 --onpart=sda1
+part /boot/efi --fstype=efi --onpart=sda1
 part pv.01 --fstype=lvmpv --encrypted --onpart=sda2
 volgroup qubes --pesize=4096 pv.01
 logvol swap --fstype=swap --vgname=qubes --name=swap --size=2000
