oem-kickstart: make sure xen services got enabled

--- a/conf/oem-kickstart.cfg
+++ b/conf/oem-kickstart.cfg
@@ -34,3 +34,9 @@ logvol / --fstype=ext4 --vgname=qubes --name=root --size=10000 --grow
 @debian-8
 @whonix
 %end
+
+%post
+
+systemctl enable xenstored
+systemctl enable xenconsoled
+%end
